src/forge/pages/Forge.scss
@mixin scroll-enabled() {
  height: 100%;
  overflow-y: auto;
}

#forge-root {
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: stretch;
  justify-content: flex-start;
  row-gap: 15px;
  flex-grow: 1;
}

.forge-area {
  display: flex;
  width: 100%;
  align-items: stretch;
  justify-content: space-between;
  column-gap: 15px;

  @include scroll-enabled()
}

.blocks-container {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  flex-direction: column;
  row-gap: 10px;
  min-width: 250px;

  padding-right: 5px;

  @include scroll-enabled();

  .used-blocks, .available-blocks {
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: stretch;
    row-gap: 10px;
  }
}

.component-form {
  width: 100%;
  @include scroll-enabled()
}

.markdown-preview {
  width: 100%;
  @include scroll-enabled()
}

